--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
@@ -31,12 +31,15 @@
     
     <div id="custom-cursor" class="hidden md:block"></div>
 
-    <div id="loader" class="fixed inset-0 z-[200] flex flex-col justify-center items-center bg-white transition-opacity duration-700">
+    <div id="loader" class="fixed inset-0 z-[200] flex flex-col justify-center items-center bg-white transition-opacity duration-1000">
         <div class="flex flex-col items-center">
-            <div class="w-12 h-[1px] bg-slate-200 relative overflow-hidden">
+            <div class="w-32 mb-8 animate-fade-in-slow">
+                <img src="sign.png" alt="Loading..." class="w-full h-auto grayscale opacity-50">
+            </div>
+            <div class="w-16 h-[1px] bg-slate-100 relative overflow-hidden">
                 <div id="loader-bar" class="absolute inset-0 bg-accent translate-x-[-100%] transition-transform duration-300"></div>
             </div>
-            <span id="loader-percentage" class="mt-4 text-[10px] tracking-widest text-slate-400 font-bold">00</span>
+            <span id="loader-percentage" class="mt-4 text-[9px] tracking-[0.4em] text-slate-400 font-bold uppercase">Loading Experience</span>
         </div>
     </div>
 
@@ -82,18 +85,18 @@
     <main>
         <section id="home" class="relative min-h-screen flex items-center justify-center pt-32 pb-20 px-6">
             <div class="hero-blob animate-soft-pulse left-[10%] top-[10%]"></div>
-            <div class="max-w-6xl w-full grid lg:grid-cols-2 gap-16 items-center z-10">
-                <div class="reveal text-left">
+            <div class="max-w-6xl w-full flex flex-col items-center text-center z-10">
+                <div class="reveal max-w-4xl">
                     <div class="overflow-hidden mb-6">
                         <span class="inline-block text-[10px] font-bold tracking-[0.3em] uppercase text-accent">Multidisciplinary Designer</span>
                     </div>
-                    <h1 class="text-5xl md:text-7xl lg:text-8xl font-heading font-bold mb-8 leading-[1.1] text-slate-900 tracking-tight">
+                    <h1 class="text-6xl md:text-8xl lg:text-9xl font-heading font-bold mb-8 leading-[1.1] text-slate-900 tracking-tight">
                         Building <span class="italic text-slate-400">digital</span> architectural excellence.
                     </h1>
-                    <p class="text-slate-500 text-lg md:text-xl mb-12 max-w-md font-light leading-relaxed">
+                    <p class="text-slate-500 text-lg md:text-xl mb-12 max-w-2xl mx-auto font-light leading-relaxed">
                         Strategic design and robust engineering for the next generation of digital products. Focused on clarity, purpose, and performance.
                     </p>
-                    <div class="flex flex-wrap gap-4">
+                    <div class="flex flex-wrap justify-center gap-4">
                         <a href="#work" class="px-8 py-4 bg-primary text-white font-bold text-[11px] tracking-widest rounded-xl hover:bg-accent transition-all shadow-xl shadow-indigo-100/50">
                             VIEW PROJECTS
                         </a>
@@ -101,23 +104,6 @@
                             MY STORY
                         </a>
                     </div>
-                </div>
-                <div class="reveal relative">
-                    <div class="relative aspect-[4/5] rounded-[2.5rem] overflow-hidden bg-slate-100 shadow-2xl">
-                        <img src="jeswin.jpg" alt="Jeswin Jose" class="hero-image w-full h-full object-cover">
-                        <div class="absolute bottom-8 left-8 right-8 glass p-6 rounded-2xl">
-                            <div class="flex items-center justify-between">
-                                <div>
-                                    <p class="text-[10px] font-bold text-slate-400 uppercase tracking-widest mb-1">Experience</p>
-                                    <p class="font-heading font-bold text-xl">5+ Years</p>
-                                </div>
-                                <div class="w-10 h-10 rounded-full border border-slate-200 flex items-center justify-center text-accent">
-                                    <i class="fa-solid fa-award"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="absolute -z-10 -bottom-10 -right-10 w-40 h-40 bg-accent/10 rounded-full blur-3xl"></div>
                 </div>
             </div>
         </section>
@@ -183,20 +169,54 @@
         </section>
     </main>
 
-    <footer class="py-20 px-6">
-        <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center gap-10">
-            <div class="flex items-center gap-2">
-                 <div class="w-6 h-6 bg-primary rounded flex items-center justify-center text-[10px] text-white">J</div>
-                 <span class="text-sm font-bold tracking-widest uppercase">JJ</span>
+    <footer class="pt-32 pb-12 px-6 bg-white overflow-hidden">
+        <div class="max-w-6xl mx-auto">
+            <div class="grid md:grid-cols-12 gap-16 mb-24">
+                <div class="md:col-span-6 reveal">
+                    <div class="mb-10">
+                        <img src="sign.png" alt="Signature" class="h-20 md:h-28 w-auto opacity-90 object-contain hover:opacity-100 transition-opacity duration-500">
+                    </div>
+                    <h3 class="text-3xl font-heading font-bold mb-6">Jeswin Jose</h3>
+                    <p class="text-slate-500 text-base max-w-sm leading-relaxed mb-8">
+                        Independent Digital Architect crafting high-performance identities and digital products for forward-thinking brands.
+                    </p>
+                    <div class="flex gap-4">
+                        <a href="#" class="w-10 h-10 rounded-full border border-slate-100 flex items-center justify-center text-slate-400 hover:text-accent hover:border-accent transition-all"><i class="fa-brands fa-linkedin-in text-sm"></i></a>
+                        <a href="#" class="w-10 h-10 rounded-full border border-slate-100 flex items-center justify-center text-slate-400 hover:text-accent hover:border-accent transition-all"><i class="fa-brands fa-github text-sm"></i></a>
+                        <a href="#" class="w-10 h-10 rounded-full border border-slate-100 flex items-center justify-center text-slate-400 hover:text-accent hover:border-accent transition-all"><i class="fa-brands fa-instagram text-sm"></i></a>
+                    </div>
+                </div>
+                
+                <div class="md:col-span-3 reveal">
+                    <h4 class="text-[10px] font-bold tracking-[0.2em] uppercase text-slate-900 mb-8">Quick Links</h4>
+                    <nav class="flex flex-col gap-4">
+                        <a href="#home" class="text-sm text-slate-500 hover:text-accent font-medium transition-colors">Overview</a>
+                        <a href="#work" class="text-sm text-slate-500 hover:text-accent font-medium transition-colors">Portfolio Showcase</a>
+                        <a href="about.html" class="text-sm text-slate-500 hover:text-accent font-medium transition-colors">About History</a>
+                        <a href="mallufinance.html" class="text-sm text-slate-500 hover:text-accent font-medium transition-colors">Financial Network</a>
+                    </nav>
+                </div>
+
+                <div class="md:col-span-3 reveal">
+                    <h4 class="text-[10px] font-bold tracking-[0.2em] uppercase text-slate-900 mb-8">Office</h4>
+                    <p class="text-sm text-slate-500 leading-relaxed mb-6">
+                        Available for select freelance engagements and architectural consulting.
+                    </p>
+                    <a href="mailto:hello@jeswinjose.com" class="text-sm font-bold border-b-2 border-slate-100 pb-1 hover:border-accent transition-colors">
+                        hello@jeswinjose.com
+                    </a>
+                </div>
             </div>
-            <div class="flex gap-10 text-[10px] font-bold tracking-widest uppercase text-slate-400">
-                <a href="#" class="hover:text-accent transition-colors">LinkedIn</a>
-                <a href="#" class="hover:text-accent transition-colors">GitHub</a>
-                <a href="#" class="hover:text-accent transition-colors">Behance</a>
+
+            <div class="pt-12 border-t border-slate-100 flex flex-col md:flex-row justify-between items-center gap-6">
+                <p class="text-[10px] text-slate-400 uppercase tracking-[0.3em]">
+                    &copy; 2026 Jeswin Jose. ARCHITECTING TOMORROW.
+                </p>
+                <div class="flex items-center gap-8">
+                    <span class="text-[10px] text-slate-300 uppercase tracking-widest">Privacy Policy</span>
+                    <span class="text-[10px] text-slate-300 uppercase tracking-widest italic">Designed by JJ</span>
+                </div>
             </div>
-            <p class="text-[10px] text-slate-300 uppercase tracking-widest">
-                &copy; 2026 Jeswin Jose. Portfolio Excellence.
-            </p>
         </div>
     </footer>
 
